# juart

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  SheppLogan.h5  THIRD_PARTY_LICENSES.txt  environment.yml  pyproject.toml  qrage.seq
.devcontainer/: .postcreate_setup.sh  Dockerfile  devcontainer.json  post-create.sh
.devcontainer/conda/: Dockerfile  Dockerfile.bak
.devcontainer/pip/: Dockerfile
examples/: NonCartesianGrappa.ipynb  reconstruction-3D-cgsense-spheric.ipynb  reconstruction-3D-cgsense-spherical.ipynb  reconstruction-3D-cgsense.ipynb
examples/dl/: 3DLiss_vd_preproc.h5  Training.ipynb  (+16 more)
notebooks/: IdealInversionEfficicncyReduced.ipynb  Simulate_MEGE_with_MRZERO.ipynb  Simulate_QRAGE_with_JEMRIS.ipynb  Simulate_QRAGE_with_MRZERO.ipynb  convert-h5-to-zarr.ipynb  gre_DI.seq  gre_noDI.seq  iter_nufft.ipynb  mege-pulseq.ipynb  mege.seq  myseq_LowRes_PartLoop_New_Mod_AdiaInvPulse.seq  myseq_LowRes_PartLoop_New_Mod_AdiaInvPulse.xml  nufft.ipynb  offresonance_correction.ipynb  offresonance_correction_new.ipynb  preprocessing.ipynb  preprocessing_local_mp2rage.ipynb  preprocessing_simulated_data.ipynb  preprocessing_simulated_data_MEGE.ipynb  preprocessing_simulated_data_QRAGE.ipynb  qrage.seq  quantify_simulated_data.ipynb  recon_cs_mp2rage.ipynb  reconstruction-gpu.ipynb  reconstruction-zarr.ipynb  reconstruction.ipynb  reconstruction_simulated_data.ipynb  reconstruction_simulated_data_MEGE.ipynb  reconstruction_simulated_data_QRAGE.ipynb  sample_DoubleSphere_R75_DX1p0_T1_1000_2000_T2_25_30.h5  seq2xml.py  signals_ismrmrd.h5
src/: seqtraj_to_mrd.py
tests/: test_fourier.py  test_pytorchfinufft_perf.ipynb  test_utils.py
zs-ssl-recon/: .gitignore  README.md  pyproject.toml
zs-ssl-recon/env/: pytorch-cuda-121.yml
zs-ssl-recon/schemes/: default.yaml  hankel_casorati_dual_domain_v1.yaml  hankel_dual_domain_test.yaml  hankel_dual_domain_v1.yaml  hankel_dual_domain_v10.yaml  hankel_dual_domain_v105.yaml  hankel_dual_domain_v108.yaml  hankel_dual_domain_v11.yaml  hankel_dual_domain_v115.yaml  hankel_dual_domain_v118.yaml  hankel_dual_domain_v11_bs2.yaml  hankel_dual_domain_v11_casorati.yaml  hankel_dual_domain_v11_lookahead.yaml  hankel_dual_domain_v12.yaml  hankel_dual_domain_v13.yaml  hankel_dual_domain_v14.yaml  hankel_dual_domain_v15.yaml  hankel_dual_domain_v15_2_hpc.yaml  hankel_dual_domain_v15_4_hpc.yaml  hankel_dual_domain_v15_8_hpc.yaml  hankel_dual_domain_v15_hpc.yaml  hankel_dual_domain_v16.yaml  hankel_dual_domain_v16_parallel.yaml  hankel_dual_domain_v17.yaml  hankel_dual_domain_v17_2_hpc.yaml  hankel_dual_domain_v17_hpc.yaml  hankel_dual_domain_v18.yaml  hankel_dual_domain_v18_2_hpc.yaml  hankel_dual_domain_v18_hpc.yaml  hankel_dual_domain_v19.yaml  hankel_dual_domain_v19_2_hpc.yaml  hankel_dual_domain_v19_hpc.yaml  hankel_dual_domain_v2.yaml  hankel_dual_domain_v20.yaml  hankel_dual_domain_v20_hpc.yaml  hankel_dual_domain_v21.yaml  hankel_dual_domain_v21_hpc.yaml  hankel_dual_domain_v22.yaml  hankel_dual_domain_v22_hpc.yaml  hankel_dual_domain_v23.yaml  (+34 more)
zs-ssl-recon/scripts/: main_ray.sh  schedule_slurm_jobs.sh  slurm_dual_train.sh  slurm_dual_train_new.sh  slurm_dual_train_new_subjects.sh  slurm_dual_train_new_subjects_ref.sh  slurm_dual_train_new_subjects_ref_grouped.sh  slurm_dual_train_ref.sh  slurm_dual_train_sharp.sh  slurm_dual_train_stable.sh  slurm_hankel_dual_domain_v15_2.sh  slurm_hankel_dual_domain_v15_4.sh  slurm_hankel_dual_domain_v15_8.sh  slurm_hankel_dual_domain_v17_2.sh  slurm_hankel_dual_domain_v18_2.sh  slurm_hankel_dual_domain_v19_2.sh  slurm_super_wide.sh  slurm_super_wide_1.sh  slurm_super_wide_16.sh  slurm_super_wide_2.sh  slurm_super_wide_4.sh  slurm_super_wide_8.sh  slurm_test.sh  slurm_wide.sh
zs-ssl-recon/zs_ssl_recon/data/: inference.py  prepare.py  training.py
zs-ssl-recon/zs_ssl_recon/model/: dc.py
zs-ssl-recon/zs_ssl_recon/operation/: modules.py
zs-ssl-recon/zs_ssl_recon/train/: ray.py
zs-ssl-recon/zs_ssl_recon/utils/: auth.py  fourier.py  validation.py  wavelet.py
(+170 files in other folders)
