[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JuART"
version = "0.0.1"
authors = [{ name = "Markus Zimmermann", email = "m.zimmermann@fz-juelich.de" }]
maintainers = [{ name = "Markus Zimmermann" }]
description = "Juelich Advanced Reconstruction Toolbox"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "h5py",
    "ipykernel",
    "ipympl",
    "matplotlib",
    "numpy",
    "scipy",
    "finufft",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]

[project.urls]
homepage = "https://github.com/inm-4/jail"
Issues = "https://github.com/inm-4/jail/issues"
# Documentation = ""

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "B", "E501"]
lint.ignore = []
