[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JuART"
version = "0.0.1"
authors = [
    { name = "Markus Zimmermann", email = "m.zimmermann@fz-juelich.de" },
    { name = "Felix Landmeyer", email = "f.landmeyer@fz-juelich.de" }
]
maintainers = [
    { name = "Markus Zimmermann" },
    { name = "Felix Landmeyer" }
]
description = "Juelich Advanced Reconstruction Toolbox"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "finufft",
    "h5py",
    "ipykernel",
    "ipympl",
    "ipywidgets",
    "ismrmrd",
    "matplotlib",
    "numpy",
    "numba",
    "pandas",
    "pytorch-finufft",
    "s3fs",
    "scikit-image",
    "scipy",
    "threadpoolctl",
    "torch>=2.0.0",
    "torch_geometric",
    "tqdm",
    "zarr",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
]
test = [

]

[project.urls]
homepage = "https://github.com/inm-4/juart"
Issues = "https://github.com/inm-4/juart/issues"
# Documentation = ""

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "B", "E501"]
lint.ignore = []
