[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "zs-ssl-recon"
version = "0.1.0"
description = "A reconstruction library for SSL."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Markus Zimmermann", email = "m.zimmermann@fz-juelich.de"}
]
dependencies = [
    "numpy>=1.20.0",  # Example dependency
    "torch>=2.0.0"    # PyTorch version 2 or later
]

[project.urls]
homepage = "https://jugit.fz-juelich.de/inm-4/mr/zs-ssl-recon"

[project.optional-dependencies]
# Optional dependencies if needed

[tool.setuptools]
packages = ["find_namespace:"]
